kube-configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-tracker-frontend
  labels:
    app: book-tracker-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-tracker-frontend
  template:
    metadata:
      labels:
        app: book-tracker-frontend
    spec:
      containers:
      - name: frontend
        image: anthonygilbertt/vue-book-tracker-frontend:v1
        ports:
        - containerPort: 5001
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-tracker-backend
  labels:
    app: book-tracker-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-tracker-backend
  template:
    metadata:
      labels:
        app: book-tracker-backend
    spec:
      containers:
      - name: backend
        image: anthonygilbertt/vue-book-tracker-backend:v1
        ports:
        - containerPort: 8083
        # env:
        # - name: PORT
        #   value: "8080"
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: 8080
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: 8080
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
