kube-configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: book-tracker
  name: book-tracker-frontend-service
  labels:
    app: book-tracker-frontend
spec:
  selector:
    app: book-tracker-frontend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
      nodePort: 30080

---
apiVersion: v1
kind: Service
metadata:
  name: book-tracker-backend-service
  namespace: book-tracker
  labels:
    app: book-tracker-backend
spec:
  selector:
    app: book-tracker-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8083
      nodePort: 30081
      name: http
  type: NodePort
